# clay-presto

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
ci/: cpp.sh
src/: clay.h  fileio.cpp  main.cpp
